Several improvements; Fixed some bugs
